publish: Log in with Apple documentation
generated from commit 977ab3e14506e54e1198fd37632981dd9f18cf4f

--- a/developer.html
+++ b/developer.html
@@ -809,7 +809,7 @@ This plugin is disabled and is no longer supported.
 
 <h3 id="oauth-plugin">Oauth plugin</h3>
 
-<p>User management and authentication plugin. Supports email+password based registration, as well as Facebook, Twitter and Google+ oauth-based authentication.</p>
+<p>User management and authentication plugin. Supports email+password based registration, as well as Facebook, Twitter, Apple and Google oauth-based authentication.</p>
 
 <h3 id="redis-cache">Redis cache</h3>
 
