--- a/index-gfw.html
+++ b/index-gfw.html
@@ -315,7 +315,7 @@
 
 <h2 id="logging-in-or-registering-a-new-user-account">Logging in or registering a new user account</h2>
 
-<p>The easiest way to access your account is through the <a href="https://api.resourcewatch.org/auth/sign-up">login page</a> of the RW API. Here you can authenticate using your existing Facebook, Google or Twitter account, or you can register or login using your email address and password. </p>
+<p>The easiest way to access your account is through the <a href="https://api.resourcewatch.org/auth/sign-up">login page</a> of the RW API. Here you can authenticate using your existing Facebook, Google, Twitter or Apple account, or you can register or login using your email address and password. </p>
 
 <p><em>Note: if you create a new user account using email and password, a confirmation link will be sent to the email address you provided. Your account will only be active once you&rsquo;ve clicked the link in that email, so ensure that you use a valid email address. If you don&rsquo;t receive this email message within a few minutes, check your spam.</em></p>
 
@@ -329,7 +329,7 @@
 
 <p>To get you token, you first need to login using your browser and the steps above. No matter which login strategy you prefer, once you&rsquo;ve logged in, you can visit <a href="https://api.resourcewatch.org/auth/generate-token">https://api.resourcewatch.org/auth/generate-token</a> to get your token.</p>
 
-<p><strong>Warning</strong>: treat a token in the same way you would treat a password - don&rsquo;t share it and always store it in a safe place (like a password manager, for example). A token is sufficient to authenticate you on the RW API, meaning that, if someone else gains access to your token, they&rsquo;ll be able to do anything that you would be able to do on the RW API, even without access to your Facebook/Google/Twitter login or your email and password.</p>
+<p><strong>Warning</strong>: treat a token in the same way you would treat a password - don&rsquo;t share it and always store it in a safe place (like a password manager, for example). A token is sufficient to authenticate you on the RW API, meaning that, if someone else gains access to your token, they&rsquo;ll be able to do anything that you would be able to do on the RW API, even without access to your Facebook/Google/Twitter/Apple login or your email and password.</p>
 
 <h2 id="how-to-use-your-private-token-to-authenticate-a-request">How to use your private token to authenticate a request</h2>
 
