publish: Fix reference links in overview section
generated from commit 25eed7ed0d493c504461611603f7a248f2cbe8d8

--- a/developer.html
+++ b/developer.html
@@ -2893,7 +2893,7 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 </thead><tbody>
 <tr>
 <td>application</td>
-<td style="text-align: center">Application to which the subscription is associated.</td>
+<td style="text-align: center">Application to which the subscription is associated. Read more about the <code class="prettyprint">application</code> field <a href="index-rw.html#applications">here</a>.</td>
 <td style="text-align: right">String</td>
 </tr>
 <tr>
@@ -2964,7 +2964,7 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 </thead><tbody>
 <tr>
 <td>application</td>
-<td style="text-align: center">Application to which the subscription is associated.</td>
+<td style="text-align: center">Application to which the subscription is associated. Read more about the <code class="prettyprint">application</code> field <a href="index-rw.html#applications">here</a>.</td>
 <td style="text-align: right">String</td>
 <td style="text-align: right">&lsquo;rw&rsquo;</td>
 </tr>
