--- a/index-rw.html
+++ b/index-rw.html
@@ -311,6 +311,28 @@
 
 <p>Please note that, in any case, you can use whatever configuration format you wish since the <code class="prettyprint">widgetConfig</code> field is free-form.</p>
 
+          <h2 id="metadata">Metadata</h2>
+
+<p>Understanding the context of data, empowering users to find and make informed decisions about its suitability is another important goal of the Resource Watch API (RW API). For example, a user may be looking to answer questions like, <em>&ldquo;Does this dataset provide information about tree cover in my region?&rdquo;</em>, <em>&ldquo;What are the physical units?&rdquo;</em>, <em>&ldquo;How was this measured?&rdquo;</em>, and <em>&ldquo;How should I provide proper attribution to the data provider?&rdquo;</em>.</p>
+
+<p>Answers to these questions can be stored in a resource&rsquo;s <a href="https://guides.ucf.edu/metadata/intrometadata">metadata</a>. By definition, metadata is always associated with another entity. In the context of the RW API, a metadata object will always contain information about either a <a href="https://resource-watch.github.io/doc-api/index-rw.html#dataset">dataset</a>, a <a href="https://resource-watch.github.io/doc-api/index-rw.html#layer">layer</a> or a <a href="https://resource-watch.github.io/doc-api/index-rw.html#widget">widget</a>.</p>
+
+<p>Content-wise, the RW API aims to provide a good balance between structure and flexibility with its metadata service, providing a group of common fields you&rsquo;ll find on all metadata elements, as well as giving API users the tools to create metadata that meets the individual needs of their applications. Through a mix of both types of fields, these are some of the recommended information you should aim to provide when specifying the metadata for one of your resources:</p>
+
+<ul>
+<li><strong>Title/Name</strong> – Name given to the resource.</li>
+<li><strong>Description</strong> – A description of the resource.</li>
+<li><strong>Author</strong> – The entities or persons produced the data.</li>
+<li><strong>Source</strong> – Where the original data was sourced from, and how to access said source.</li>
+<li><strong>Contact information</strong> – A way to contact the author.</li>
+<li><strong>Schema</strong> – Description of the data structure, like column names, types, descriptions, etc.</li>
+<li><strong>License</strong> – Information about the rights held in and over the resource.</li>
+</ul>
+
+<p>As we&rsquo;ll see in further details when covering the metadata endpoints, a RW API metadata object has a few structured but optional fields to capture some of the general details described above, while also allowing you to specify your own custom fields for ease of extension and flexibility, should you want to provide additional levels of detail about your resources. It will also give you the tools to only specify a subset of the suggested elements above, should you decide to use that approach.</p>
+
+<p>Besides being associated with a single RW API resource (dataset, widget, or layer), a metadata element and must also identify the language in which it&rsquo;s written, as well as the <a href="https://resource-watch.github.io/doc-api/index-rw.html#applications">application</a> it&rsquo;s associated with. This allows a single resource, say a dataset, to have its metadata translated into different languages, and be adjusted to meet the needs of different applications. We&rsquo;ll go into further details on these when we cover the metadata endpoints in their dedicated section.</p>
+
           <h2 id="geostore">Geostore</h2>
 
 <p>Allowing users to interact with data in the context of geographic data structures, such as the boundaries of countries or the location of power plants, is an important goal of the Resource Watch API (RW API). For example a user maybe looking to answer questions like <em>&ldquo;How much tree cover is there in my region?&rdquo;</em> or <em>&ldquo;How many power-plants are situated on the coast?&rdquo;</em>.</p>
@@ -2908,7 +2930,7 @@ If you have the <code class="prettyprint">ADMIN</code> role, you can use the <co
 <blockquote>
 <p>Flush dataset&rsquo;s cache</p>
 </blockquote>
-<pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/v1/0c630feb-8146-4fcc-a9be-be5adcb731c8/flush <span class="se">\</span>
+<pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/v1/dataset/0c630feb-8146-4fcc-a9be-be5adcb731c8/flush <span class="se">\</span>
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span>
 </code></pre>
 <blockquote>
