publish: Address review feedback
generated from commit ddabfb513cb953cb7a1a591643166515d0d1570d

--- a/developer.html
+++ b/developer.html
@@ -2898,7 +2898,7 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 </tr>
 <tr>
 <td>env</td>
-<td style="text-align: center">Environment to which the subscription is associated.</td>
+<td style="text-align: center">Environment to which the subscription is associated. Read more about this field in the <a href="index-rw.html#environments">Environments concept section</a>.</td>
 <td style="text-align: right">String</td>
 </tr>
 </tbody></table>
@@ -2970,7 +2970,7 @@ curl -X POST https://api.resourcewatch.org/auth/user/find-by-ids <span class="se
 </tr>
 <tr>
 <td>env</td>
-<td style="text-align: center">Environment to which the subscription is associated.</td>
+<td style="text-align: center">Environment to which the subscription is associated. Read more about this field in the <a href="index-rw.html#environments">Environments concept section</a>.</td>
 <td style="text-align: right">String</td>
 <td style="text-align: right">&#39;production&rsquo;</td>
 </tr>
